--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,8 @@
   "name": "techoSurveyMobile",
   "private": "true",
   "devDependencies": {
-    "ionic": "*",
-    "mathjs": "~1.7.0"
-  },
-  "dependencies": {
-    "mathjs": "~1.7.0"
+    "ionic": "driftyco/ionic-bower#1.0.0",
+    "mathjs": "~1.7.0",
+    "ngCordova": "~0.1.17-alpha"
   }
 }
